fix spacing

--- a/src/components/task-calendar/task-calendar.scss
+++ b/src/components/task-calendar/task-calendar.scss
@@ -71,7 +71,7 @@ task-calendar {
   .metrics {
     display: inline-flex;
     float: left;
-    margin-left: 30%;
+    margin-left: 40px;
   }
 
   .metric-time {
